--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<phpunit bootstrap="tests/bootstrap.php" colors="true">
+<phpunit bootstrap="tests/bootstrap.php"
+         backupGlobals="false"
+         backupStaticAttributes="false"
+         colors="true"
+         verbose="true"
+         convertErrorsToExceptions="true"
+         convertNoticesToExceptions="true"
+         convertWarningsToExceptions="true"
+         processIsolation="true"
+         stopOnFailure="false">
     <testsuites>
         <testsuite name="MyFirstPackage Test Suite">
             <directory>tests/MyFirstPackage/</directory>
@@ -14,7 +23,9 @@
     </filter>
 
     <logging>
-        <log type="coverage-clover" target="clover.xml"/>
+        <log type="coverage-html" target="./build/coverage" charset="UTF-8" yui="true" highlight="true"/>
+        <log type="coverage-text" target="./build/coverage.txt"/>
+        <log type="coverage-clover" target="./build/clover.xml"/>
     </logging>
 
     <php>
