--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "chantqube/my-first-package",
-    "description": "My First Package",
+    "name": "chantqube/messagetram",
+    "description": "Message Tram",
     "keywords": ["first package"],
     "type": "package",
     "license": "UNLICENSED",
@@ -16,9 +16,9 @@
     "minimum-stability": "dev",
     "require-dev": {
         "phpunit/phpunit": "^6.3@dev",
-        "squizlabs/php_codesniffer": "^3.0@dev",
         "jakub-onderka/php-parallel-lint": "dev-master",
-        "satooshi/php-coveralls": "^2.0@dev"
+        "mockery/mockery": "^1.0@dev",
+        "squizlabs/php_codesniffer": "^3.0@dev"
     },
     "autoload": {
         "psr-4": {
